--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ecom.shopping">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:name=".ShoppingApplication"
             android:theme="@style/AppTheme">
         <activity android:name=".app.components.ShoppingCartActivity">
             <intent-filter>
